# prada

./: .gitignore  README.md  predict.py  pyproject.toml
prada_weights/hmar_d20/: final.pt
prada_weights/hmar_d30/: final.pt
prada_weights/infinity_2b/: final.pt
prada_weights/janus_1b/: final.pt
prada_weights/llamagen_b256/: final.pt
prada_weights/llamagen_l256/: final.pt
prada_weights/llamagen_xlstage2/: final.pt
prada_weights/rar_l/: final.pt
prada_weights/rar_xxl/: final.pt
prada_weights/switti_1024/: final.pt
prada_weights/var_d20/: final.pt
prada_weights/var_d30/: final.pt
scripts/: prepare_imagenet.py  prepare_raise1k.py
src/prada/: data.py  metrics.py  misc.py  prada.py  prompt_extraction.py
src/prada/wrappers/: __init__.py  base.py  hmar.py  infinity.py  janus.py  llamagen.py  rar.py  switti.py  var.py
