[project]
name = "prada"
version = "0.1.0"
description = "Source code for the CVPR Findings 2026 paper 'PRADA: Probability-Ratio-Based Attribution and Detection of Autoregressive-Generated Images'"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "attrdict>=2.0.1",
    "autocvd>=0.2.1",
    "bs4>=0.0.2",
    "datasets>=4.8.2",
    "diffusers>=0.35.1",
    "einops>=0.8.1",
    "fire>=0.7.1",
    "flash-attn>=2.8.3",
    "huggingface-hub>=0.35.2",
    "imageio>=2.37.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "omegaconf>=2.3.0",
    "open-clip-torch>=3.2.0",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.2",
    "pip>=25.2",
    "protobuf>=6.32.1",
    "pytest>=8.4.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "setuptools>=80.9.0",
    "timm>=1.0.20",
    "tomli-w>=1.2.0",
    "torch>=2.8.0",
    "torch-fidelity>=0.3.0",
    "torchinfo>=1.8.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.2",
    "typed-argument-parser>=1.11.0",
    "wandb>=0.22.2",
    "webdataset>=1.0.2",
]

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[tool.uv.extra-build-dependencies]
flash-attn = [
    { requirement = "torch", match-runtime = true },
]

[tool.ruff]
extend-exclude = [
    "src/external",
]
line-length = 120

[tool.ruff.lint]
extend-select = [
    "I",
]
ignore = [
    "E402",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
